Remove stale comment regarding StringKeyframe being eagerly evaluated.

As of https://codereview.chromium.org/2043273002 we don't snapshot
compositor keyframes eagerly, instead we snapshot during style resolve.
The compositor animations code relies on style resolve occuring before
we commit compositor animations rather than eager evaluation now.

BUG=657242

Review-Url: https://chromiumcodereview.appspot.com/2429353002
Cr-Commit-Position: refs/heads/master@{#426376}

Former-commit-id: f4ffc982b16ade07e7b821633110807cc325d272